fix sizing issue on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,7 @@
 
 .card-section {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
   grid-gap: 1rem;
 }
 
